helloworld/virtual-service-helloworld-delay-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-delay-fault
spec:
  hosts:
  - helloworld
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 10s
# - fault:
#     abort:
#       percent: 100
#       httpStatus: 503
    route:
    - destination:
        host: helloworld
        subset: v1
